[package]
name = "gui-tools"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = { version = "1.0.0", default-features = false }
chalkboard = { path = "../chalkboard/chalkboard" }
once_cell = { version = "1.13.0", default-features = false, features = ["alloc"] }
spin = { version = "0.9.4", default-features = false, features = ["rwlock"] }
tracing = { version = "0.1.36", default-features = false }

[features]
default = ["std"]
std = ["once_cell/std"]
